# task_runner

./: .env  .gitignore  ADD_RETRY_WITH_BACKOFF.md  AUDIT_1_CODEX.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.full  INTEGRATION_TEST_AUDIT.md  Justfile  PLAN_IDEPOTENCY_KEY.md  TODO.md  build.rs  create_from_diff.sh  diesel.toml  docker-compose.yaml  my_todo  readme.md  res.json  test.db  test_case_bug.md
.githooks/: pre-commit
.github/workflows/: build.yaml
docs/: api.md  concepts.md  configuration.md  metrics.md  openapi_description.md
docs/audits/: AUDIT_1_CLAUDE.md  ISSUES.md
docs/plan/: ADD_CONDITIONAL_BRANCHING.md  ADD_CONDITIONAL_BRANCHING_SQL_HEAVY.md  PLAN_IDEPOTENCY_KEY.md  remediation_plan_2.md
grafana/: dashboard.json
migrations/20170124012402_create_users/: down.sql
migrations/2025-05-04-100922_create_posts/: down.sql
migrations/2025-05-04-100922_create_task/: up.sql
migrations/2025-05-04-130604_create_action/: up.sql
migrations/2025-05-04-130604_create_posts/: down.sql  up.sql
migrations/2025-08-01_add_startable/: down.sql  up.sql
migrations/2025-08-27-091353_add-cancel-status/: up.sql
migrations/2025-08-27-091354_add-links/: down.sql  up.sql
migrations/2025-12-01-000001_add_indexes/: down.sql  up.sql
migrations/2025-12-01-000002_add_batch_id/: down.sql  up.sql
migrations/2026-02-14-000001_add_retention_index/: down.sql  up.sql
migrations/2026-02-19-000001_add_link_parent_id_index/: down.sql  up.sql
migrations/2026-02-19-000002_add_composite_indexes/: down.sql  up.sql
migrations/2026-02-19-000003_add-claimed-status/: down.sql  up.sql
migrations/2026-02-22-000001_add_webhook_execution/: down.sql  up.sql
migrations/2026-02-22-000002_add_expected_count/: down.sql  up.sql
migrations/2026-02-25-000001_add_dead_end_barrier/: down.sql  up.sql
migrations/2026-03-13-000001_add_priority/: down.sql  up.sql
scripts/: setup-hooks.sh
sdk/: Cargo.toml
sdk/src/: error.rs  lib.rs  types.rs
src/: action.rs  actions.rs  cache_helper.rs  cahe_helper.rs  circuit_breaker.rs  config.rs  db.rs  db_operation.rs  dtos.rs  error.rs  handlers.rs  helper.rs  lib.rs  main.rs  metrics.rs  models.rs  rule.rs  schema.rs  test.rs  test_server.rs  tracing.rs  validation.rs  workers.rs
src/db/: batch_listing.rs  cleanup.rs  mod.rs  task_crud.rs  task_lifecycle.rs  task_query.rs  webhook_execution.rs
src/dtos/: batch.rs  dag.rs  mod.rs  query.rs  task.rs
src/handlers/: batch.rs  dag.rs  health.rs  mod.rs  response.rs  task.rs
src/validation/: action.rs  constants.rs  mod.rs  ssrf.rs  task.rs
src/workers/: batch_updater.rs  mod.rs  propagation.rs  retention.rs  start_loop.rs  timeout_loop.rs  webhooks.rs
static/: dag.html
test/: test.ts  test_case.md
tests/: README.md  integration_tests.rs  test_actions.rs  test_batch_update.rs  test_bug_audit1.rs  test_bug_audit2.rs  test_concurrency.rs  test_crud.rs  test_dag.rs  test_dead_end_cancel.rs  test_dedupe.rs  test_edge_cases.rs  test_filtering.rs  test_health.rs  test_idempotency.rs  test_propagation.rs  test_regressions.rs  test_status.rs
tests/common/: assertions.rs  builders.rs  setup.rs  state.rs
tests/integration/: main.rs  test_actions.rs  test_batch_rules.rs  test_batch_stats.rs  test_batch_update.rs  test_bug_audit1.rs  test_bug_audit2.rs  test_cancel_webhook.rs  test_concurrency.rs  test_crud.rs  test_dag.rs  test_dead_end_cancel.rs  test_dedupe.rs  test_edge_cases.rs  test_filtering.rs  test_health.rs  test_idempotency.rs  test_parallel_webhooks.rs  test_priority.rs  test_propagation.rs  test_propagation_edge.rs  test_regressions.rs  test_requeue_stale.rs  test_status.rs  test_stop_batch.rs  test_validation_e2e.rs  test_webhook_flows.rs
tests/integration/common/: assertions.rs  builders.rs  mock_server.rs  mod.rs  setup.rs  state.rs
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  api.ts  constants.ts  index.css  index.tsx  storage.ts  types.ts
ui/src/components/: BatchList.tsx  BatchProgress.tsx  BatchRulesEditor.tsx  ConfirmModal.tsx  DagCanvas.tsx  DagToolbar.tsx  ErrorBoundary.tsx  IsometricView.tsx  KeyboardHelp.tsx  KindFilter.tsx  Legend.tsx  StatsBar.tsx  StatusBadge.tsx  StatusFilter.tsx  TaskInfoPanel.tsx  TaskTable.tsx  TimelineView.tsx  ToastContainer.tsx  ToggleFilter.tsx
ui/src/lib/: criticalPath.ts  dagDiff.ts  exportCsv.ts  format.ts  isometricLayout.ts  isometricSceneBuilder.ts  threeHelpers.ts
ui/src/pages/: BatchesPage.tsx  DagPage.tsx
