[package]
name = "task-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4" }
serde = { version = "1.0", features = ["derive"], default-features = false }
dotenvy = "0.15.7"
serde_json = "1.0.140"
diesel = { version = "2.2.8", features = [
    "postgres",
    "uuid",
    "serde_json",
    "chrono",
    "32-column-tables",
], default-features = false }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.8", features = [
    "json",
    "rustls-tls",
], default-features = false }
diesel-derive-enum = { version = "3.0.0-beta.1", features = [
    "postgres",
], default-features = false }
chrono = { version = "0.4.41", features = ["serde"], default-features = false }
actix = { version = "0.13.5", default-features = false }
tokio-postgres = "0.7.7"
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
futures-util = "0.3.21"
# ring = "0.17.8"
rustls-platform-verifier = "0.5.0"
tokio-postgres-rustls = "0.13.0"
tokio = { version = "1.45.0", default-features = false }
actix-web-prometheus = "0.1.2"
rustls = { version = "0.23.8", features = ["ring"], default-features = false }
diesel_migrations = "2.2.0"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "test-server"
path = "src/test_server.rs"

[[bin]]
name = "cache"
path = "src/cache_helper.rs"
