[package]
name = "arcrun-sdk"
version = "0.1.0"
edition = "2024"
description = "Rust SDK client for the ArcRun API"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"], default-features = false }
thiserror = "2.0"
